@@ -32,6 +32,7 @@ Fixed Bugs:
 - Fixed teaseStorage.removeItem setting the item to null instead of removing it from storage.
 - PlayerSceneManager gotoScene and pages.goto doesn't stop with an error anymore
   if the Scene doesn't exist.
+- If a PlayerTimer in an EOS script is abborted, it should not play the child instructions.
 
 =================
 Version 1.6.1.0
